RESOLVED FIXED27828
Title attribute is not respected on option elements
https://bugs.webkit.org/show_bug.cgi?id=27828
Summary Title attribute is not respected on option elements
Adam Brunner
Reported 2009-07-30 00:54:10 PDT
Created attachment 33762 [details] testcase for the bug If I create an <option> element with title="option's title text" in a <select>, the tooltip will not be shown.
Attachments
testcase for the bug (408 bytes, text/html)
2009-07-30 00:54 PDT, Adam Brunner
no flags
firefox screencapture (5.69 KB, image/jpeg)
2009-07-30 00:56 PDT, Adam Brunner
no flags
webkit screencapture (2.97 KB, image/jpeg)
2009-07-30 00:56 PDT, Adam Brunner
no flags
Patch for the Mac part of this (4.15 KB, patch)
2009-07-30 18:24 PDT, Mark Rowe (bdash)
adele: review+
Adam Brunner
Comment 1 2009-07-30 00:56:15 PDT
Created attachment 33763 [details] firefox screencapture
Adam Brunner
Comment 2 2009-07-30 00:56:33 PDT
Created attachment 33764 [details] webkit screencapture
Adam Brunner
Comment 3 2009-07-30 00:59:37 PDT
Additionally, the W3C HTML4.01 Specification defines [1] that <option> can have a title attribute. Also Mozilla Firefox and Microsoft Internet Explorer 7+ do this well. [1] http://www.w3.org/TR/html401/interact/forms.html#edef-OPTION
Mark Rowe (bdash)
Comment 4 2009-07-30 02:01:02 PDT
This is trivial to fix on Mac, but somewhat more involved on other platforms.
Mark Rowe (bdash)
Comment 5 2009-07-30 18:24:30 PDT
Created attachment 33851 [details] Patch for the Mac part of this I'll clone this bug to track fixing this for other platforms after this is landed.
Mark Rowe (bdash)
Comment 6 2009-07-30 18:29:03 PDT
Landed in r46617.
Mark Rowe (bdash)
Comment 7 2009-07-30 18:30:24 PDT
Bug 27864 tracks fixing this for other platforms.
Note You need to log in before you can comment on or make changes to this bug.