Bug 27828: Title attribute is not respected on option elements Fix <https://bugs.webkit.org/show_bug.cgi?id=27828> for Mac.

Reviewed by Adele Peterson and Jon Honeycutt.

No tests added as it is not clear how to test a tool tip from DumpRenderTree.

* platform/PopupMenuClient.h: Add a method for retrieving the tool tip of an item.
* platform/mac/PopupMenuMac.mm:
(WebCore::PopupMenu::populate): Set the tool tip of the menu item to that of the represented item.
* rendering/RenderMenuList.cpp:
(WebCore::RenderMenuList::itemToolTip): Expose the title attribute of the element as the tool tip.
* rendering/RenderMenuList.h:
* rendering/RenderTextControlSingleLine.h:
(WebCore::RenderTextControlSingleLine::itemToolTip): Return an empty string, indicating no tool tip, for
the popup menu in RenderTextControlSingleLine.

Canonical link: https://commits.webkit.org/38223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46617 268f45cc-cd09-0410-ab3c-d52691b4dbfc