WebCore/platform/PopupMenuClient.h
@@ -39,6 +39,7 @@ public:
     virtual void valueChanged(unsigned listIndex, bool fireEvents = true) = 0;
 
     virtual String itemText(unsigned listIndex) const = 0;
+    virtual String itemToolTip(unsigned listIndex) const = 0;
     virtual bool itemIsEnabled(unsigned listIndex) const = 0;
     virtual PopupMenuStyle itemStyle(unsigned listIndex) const = 0;
     virtual PopupMenuStyle menuStyle() const = 0;
